День 18. Реранкинг и фильтрация
Добавьте второй этап после поиска: reranker или фильтр релевантности (например, через порог коэффициента похожести или используя стороннюю модель)
Сравните качество ответа без фильтра и с фильтром

Настройте порог отсечения нерелевантных результатов

Результат: Улучшенный RAG с фильтрацией/реранкингом